1. Implement the flow to generate quetion-answer pairs from descriptive text files. 2. Add more comments to example jupyter notebooks 3. Manage openai key with python-dotenv 4. Manage package dependencies with poetry. NOTE: Download the en_core_web_sm model manually since it is not in pypl. 5. Improve the file structure for question-answer generation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+spacy = "^3.7.0"
+pandas = "2.0.3"
+clean-text = "0.6.0"
+python-dotenv = "^1.0.0"
+lmqg = "0.1.1"
+openai = "^0.28.1"
+torch = "^1.12.1"
 
 
 [build-system]
