--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ graphviz = "0.20.1"
 langchain = "0.0.319"
 unstructured = "0.10.24"
 peft = "0.5.0"
+pypdf = "^3.17.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
