--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ python = ">=3.9,<3.13"
 python-dotenv = "^1.0.0"
 openai = "^1.2.4"
 graphviz = "^0.20.1"
+pydantic = "^2.5.2"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "3.5.0"
+pre-commit = "^3.5.0"
 
 
 [build-system]
