--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,18 +16,22 @@ spec:
     spec:
       containers:
         - name: uniflow
-          image: my-uniflow-app  # Replace with your Docker image name
+          image: sherry0506/uniflow-expand-reduce:latest  # Replace with your Docker image name
+          # imagePullPolicy: Always
           ports:
-            - containerPort: 5000  # Replace with your application's port
+            - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: uniflow-service
 spec:
+  type: NodePort
   selector:
     app: uniflow
   ports:
-    - port: 80  # External port
-      targetPort: 5000  # Container port
-  type: LoadBalancer  # Expose service externally (if applicable)
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+      nodePort: 30080
+  # type: LoadBalancer  # Cloud only
