--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 openai = "^1.2.4"
 graphviz = "^0.20.1"
 pydantic = "^2.5.2"
+tiktoken = "^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
