Update CODEOWNERS to include new reviewer

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Default codeowners/reviewers for all code changes
-* @CambioML @goldmermaid @SayaZhang @CluckRookie @SeisSerenata
+* @lingjiekong @goldmermaid @SayaZhang @CluckRookie @SeisSerenata
